# helmer

./: .gitignore  Cargo.toml  LICENSE  README.md  building.md
becs_bench/: Cargo.toml
becs_bench/src/: main.rs
becs_bench/src/systems/: config_toggle.rs  drag.rs  freecam.rs  mod.rs  spawner.rs  spinner.rs
helmer/: Cargo.toml  README.md
helmer-engine/: Cargo.toml
helmer-engine/src/: lib.rs
helmer-engine/src/ecs/: component_pool.rs  ecs_core.rs  resource_pool.rs  system.rs  system_scheduler.rs
helmer-engine/src/graphics/: config.rs  mod.rs  renderer_system.rs
helmer-engine/src/graphics/renderer/: deferred.rs  forward.rs  forward_pmu.rs  forward_ta.rs  mod.rs  renderer.rs
helmer-engine/src/graphics/shaders/: composite.wgsl  downsample.wgsl  forward_low_end.wgsl  forward_pmu.wgsl  forward_ta.wgsl  g_buffer.wgsl  lighting.wgsl  shadow.wgsl  sky.wgsl  ssgi.wgsl  ssgi_denoise.wgsl  ssr.wgsl
helmer-engine/src/physics/: systems.rs
helmer-engine/src/provided/: components.rs  mod.rs  ui.rs
helmer-engine/src/runtime/: asset_server.rs  config.rs  egui_integration.rs  input_manager.rs  mod.rs  runtime.rs  scene_system.rs
helmer/src/: lib.rs
helmer/src/animation/: mod.rs
helmer/src/audio/: mod.rs
helmer/src/graphics/: config.rs  mod.rs  raytracing.rs  render_graphs.rs  renderer.rs
helmer/src/graphics/backend/: bind_group.rs  binding_backend.rs  bindless_fallback.rs  bindless_modern.rs  mod.rs
helmer/src/graphics/common/: atmosphere.rs  config.rs  constants.rs  graph.rs  meshlets.rs  mod.rs  raytracing.rs  renderer.rs
helmer/src/graphics/graph/: mod.rs
helmer/src/graphics/legacy_renderers/: deferred.rs  forward_pmu.rs  forward_ta.rs  mod.rs
helmer/src/graphics/passes/: composite.rs  ddgi_probe_update.rs  ddgi_resample.rs  debug_composite.rs  depth_copy.rs  downsample.rs  egui.rs  examples.rs  gbuffer.rs  gizmo.rs  mod.rs  raytracing.rs  raytracing.wgsl  raytracing_arrays.wgsl  raytracing_composite.rs  raytracing_untextured.wgsl  reflection_combine.rs  rt_reflections.rs  shadow.rs  sky.rs  sprite.rs  ssgi.rs  ssgi_denoise.rs  ssgi_upsample.rs  ssr.rs
helmer/src/graphics/renderer/: deferred.rs  forward_pmu.rs  forward_ta.rs  mod.rs  renderer.rs
helmer/src/graphics/renderer_common/: atmosphere.rs  common.rs  error.rs  graph.rs  meshlets.rs  mipmap.rs  mod.rs
helmer/src/graphics/renderers/: deferred.rs  forward_pmu.rs  forward_ta.rs  mod.rs
helmer/src/graphics/shaders/: atmosphere_precompute.wgsl  atmosphere_precompute_raster.wgsl  bind.wgsl  composite.wgsl  composite_debug.wgsl  composite_debug_mesh.wgsl  composite_mesh.wgsl  ddgi_probe_update.wgsl  ddgi_probe_update_arrays.wgsl  ddgi_probe_update_bindless.wgsl  depth_copy.wgsl  downsample_mesh.wgsl  forward_pmu.wgsl  forward_ta.wgsl  g_buffer.wgsl  g_buffer_bindgroups.wgsl  g_buffer_bindgroups_no_depth.wgsl  g_buffer_bindgroups_no_depth_webgl.wgsl  gizmo.wgsl  (+30 more)
helmer/src/provided/: components.rs
helmer/src/runtime/: asset_server.rs  asset_worker.rs  clock.rs  config.rs  input_manager.rs  log_bridge.rs  mod.rs  runtime.rs  wasm_harness.rs  windows_timer.rs
helmer_asset/: Cargo.toml  worker_bridge.js
helmer_asset/src/: extension.rs  lib.rs
helmer_asset/src/runtime/: asset_server.rs  asset_worker.rs  mod.rs
helmer_audio/: Cargo.toml
helmer_audio/src/: extension.rs  lib.rs
helmer_audio/src/audio/: mod.rs
helmer_becs/: Cargo.toml
helmer_becs/src/: components.rs  egui_integration.rs  lib.rs  profiling.rs  resources.rs  ui_integration.rs
helmer_becs/src/physics/: components.rs  physics_resource.rs  systems.rs
helmer_becs/src/provided/: ui.rs
helmer_becs/src/runtime/: config.rs  init.rs  logic.rs  mod.rs
helmer_becs/src/systems/: animation_system.rs  audio_system.rs  follow_system.rs  mod.rs  render_system.rs  scene_system.rs  spline_system.rs
helmer_build_runtime/: Cargo.toml
helmer_build_runtime/src/: builder.rs  crypto.rs  ffi.rs  format.rs  lib.rs  reader.rs
helmer_ecs/: Cargo.toml
helmer_ecs/proc/: Cargo.toml
helmer_ecs/proc/src/: lib.rs
helmer_ecs/src/: components.rs  egui_integration.rs  lib.rs
helmer_ecs/src/ecs/: component.rs  component_pool.rs  ecs_core.rs  mod.rs  resource.rs  system.rs  system_scheduler.rs
helmer_ecs/src/physics/: components.rs  mod.rs  physics_resource.rs  systems.rs
helmer_ecs/src/provided/: ui.rs
helmer_ecs/src/systems/: mod.rs  renderer_system.rs  scene_system.rs  spline_system.rs
helmer_editor/: Cargo.toml
helmer_editor/src/: main.rs
helmer_editor/src/editor/: assets.rs  commands.rs  console.rs  dynamic.rs  gizmos.rs  layout.rs  mod.rs  project.rs  scene.rs  scripting.rs  systems.rs  timeline.rs  ui.rs  undo.rs  viewport.rs  visual_scripting.rs  watch.rs
helmer_editor/src/retained/: docking.rs  graph.rs  layout.rs  mod.rs  shell.rs  shell_actions.rs  shell_data.rs  state.rs  workspace.rs
helmer_editor/src/systems/: mod.rs
helmer_editor_egui/: Cargo.toml
helmer_editor_egui/src/: lib.rs  main.rs  pane_workspace.rs
helmer_editor_egui/src/editor/: assets.rs  commands.rs  console.rs  dynamic.rs  gizmos.rs  layout.rs  mod.rs  project.rs  scene.rs  scripting.rs  systems.rs  timeline.rs  ui.rs  undo.rs  viewport.rs  visual_scripting.rs  watch.rs
helmer_editor_egui/src/systems/: mod.rs
helmer_input/: Cargo.toml
helmer_input/src/: extension.rs  lib.rs
helmer_input/src/input_manager/: egui_bridge.rs  events.rs  gamepad.rs  mod.rs
helmer_networking/: Cargo.toml
helmer_networking/src/: api.rs  extension.rs  hub.rs  lib.rs  native.rs  wasm.rs  wire.rs
helmer_player/: Cargo.toml
helmer_player/src/: main.rs
helmer_render/: Cargo.toml
helmer_render/src/: extension.rs  lib.rs  runtime.rs
helmer_render/src/graphics/: mod.rs  render_graphs.rs  renderer.rs
helmer_view/: Cargo.toml
helmer_view/src/: main.rs
helmer_view/src/systems/: mod.rs  model_loader.rs  scene_loader.rs
helmer_window/: Cargo.toml
helmer_window/src/: config.rs  event.rs  extension.rs  lib.rs  service.rs  state.rs  wasm_harness.rs
test_game/: Cargo.toml
test_game/assets/materials/: shiny_metal.ron  tex.ron
test_game/src/: main.rs
(+295 files in other folders)
