[package]
name = "helmer-rs"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
winit = "0.30.10"
proc = { path = "proc" }
glam = "0.30.2"
rayon = "1.10.0"
hashbrown = { version = "0.15.3", features = ["rayon"] }
parking_lot = "0.12.3"
raw-window-handle = "0.6.2"
float-derive = "0.1.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bytemuck = "1.23.0"
wgpu = "25.0.2"
pollster = "0.4.0"
resvg = "0.45.1"
softbuffer = "0.4.6"
colored = "3.0.0"
rapier3d = "0.26.1"
rand = "0.9.1"
gltf = "1.4.1"
ktx2 = "0.4.0"
basis-universal = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
mikktspace = "0.3.0"
crossbeam-channel = "0.5.15"
