[package]
name = "becs_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.17.2"
gilrs = "0.11.0"
glam = "0.30.8"
helmer = { path = "../helmer" }
helmer_becs = { path = "../helmer_becs" }
winit = "0.30.12"
egui = "0.33.3"
rapier3d = { version = "0.26.1", features = ["simd-stable", "parallel"] }
parking_lot = "0.12.3"
rand = "0.9.2"
