[package]
name = "becs_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.17.2"
glam = "0.30.9"
helmer = { path = "../helmer" }
helmer_becs = { path = "../helmer_becs" }
winit = "0.30.12"
egui = "0.33.3"
parking_lot = "0.12.5"
rand = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.11.1"
rapier3d = { version = "0.32.0", features = ["simd-stable", "parallel"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rapier3d = { version = "0.32.0", default-features = false, features = ["dim3", "f32", "simd-stable"] }
