[package]
name = "helmer"
version = "0.1.0"
edition = "2024"

[features]
asset-worker = []

[dependencies]
winit = "0.30.10"
glam = "0.30.2"
hashbrown = "0.15.3"
parking_lot = "0.12.3"
raw-window-handle = "0.6.2"
float-derive = "0.1.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bytemuck = "1.23.0"
rand = "0.9.1"
base64 = "0.21.7"
gltf = { version = "1.4.1", features = ["KHR_materials_emissive_strength", "KHR_texture_transform", "KHR_materials_pbrSpecularGlossiness"] }
ktx2 = "0.4.0"
basis-universal = "0.3.1"
meshopt = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
mikktspace = "0.3.0"
crossbeam-channel = "0.5.15"
image = { version = "0.25.6", features = ["png"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
slotmap = "1.0.7"
generational-arena = "0.2.9"
bitflags = "2.10.0"
dyn-clone = "1.0.20"
web-time = "1.1.0"
bincode = "1.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"
hashbrown = { version = "0.15.3", features = ["rayon"] }
wgpu = { version = "28.0.0", features = ["static-dxc"] }
pollster = "0.4.0"
resvg = "0.45.1"
softbuffer = "0.4.6"
colored = "3.0.0"
rapier3d = { version = "0.26.1", features = ["simd-stable", "parallel"] }
memmap2 = "0.9.5"
gilrs = "0.11.0"
num_cpus = "1.17.0"
egui-winit = "0.33.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "28.0.0", features = ["webgl"] }
rapier3d = { version = "0.26.1", default-features = false, features = ["dim3", "f32", "simd-stable"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
egui-winit = { version = "0.33.3", default-features = false }
web-sys = { version = "0.3.83", features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "File",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemWritableFileStream",
    "Gamepad",
    "GamepadButton",
    "HtmlCanvasElement",
    "HtmlElement",
    "Navigator",
    "Node",
    "Response",
    "StorageManager",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "Window",
] }
js-sys = "0.3.83"
