[package]
name = "helmer"
version = "0.1.0"
edition = "2024"

[features]
asset-worker = []
audio-cpal = []

[dependencies]
winit = "0.30.12"
glam = "0.30.9"
hashbrown = "0.16.1"
parking_lot = "0.12.5"
raw-window-handle = "0.6.2"
float-derive = "0.1.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
bytemuck = "1.25.0"
rand = "0.9.2"
base64 = "0.22.1"
gltf = { version = "1.4.1", features = ["KHR_materials_emissive_strength", "KHR_texture_transform", "KHR_materials_pbrSpecularGlossiness"] }
ktx2 = "0.4.0"
basis-universal = "0.3.1"
meshopt = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"
mikktspace = "0.3.0"
crossbeam-channel = "0.5.15"
image = { version = "0.25.9", features = ["png"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
slotmap = "1.1.1"
generational-arena = "0.2.9"
bitflags = "2.10.0"
dyn-clone = "1.0.20"
web-time = "1.1.0"
bincode = "1.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11.0"
hashbrown = { version = "0.16.1", features = ["rayon"] }
wgpu = { version = "28.0.0", features = ["static-dxc"] }
pollster = "0.4.0"
resvg = "0.46.0"
softbuffer = "0.4.8"
colored = "3.1.1"
rapier3d = { version = "0.32.0", features = ["simd-stable", "parallel"] }
memmap2 = "0.9.9"
gilrs = "0.11.1"
num_cpus = "1.17.0"
egui-winit = "0.33.3"
cpal = "0.15.3"
symphonia = { version = "0.5.4", default-features = false, features = ["aac", "flac", "mp3", "ogg", "vorbis", "wav", "pcm"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "28.0.0", features = ["webgl"] }
rapier3d = { version = "0.32.0", default-features = false, features = ["dim3", "f32", "simd-stable"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
egui-winit = { version = "0.33.3", default-features = false }
web-sys = { version = "0.3.85", features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "File",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemWritableFileStream",
    "Gamepad",
    "GamepadButton",
    "HtmlCanvasElement",
    "HtmlElement",
    "Navigator",
    "Node",
    "Response",
    "StorageManager",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "Window",
] }
js-sys = "0.3.85"
