[package]
name = "helmer"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.16.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.85", features = ["console"] }
