[package]
name = "helmer_audio"
version = "0.1.0"
edition = "2024"

[dependencies]
helmer = { path = "../helmer" }
glam = "0.30.9"
hashbrown = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"
cpal = "0.15.3"
symphonia = { version = "0.5.4", default-features = false, features = ["aac", "flac", "mp3", "ogg", "vorbis", "wav", "pcm"] }
