[package]
name = "helmer_build_runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3.3"
crc32fast = "1.5.0"
flate2 = "1.1.5"
helmer_editor_runtime = { path = "../helmer_editor_runtime" }
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
