[package]
name = "helmer_ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
proc = { path = "proc" }
helmer = { path = "../helmer" }
hashbrown = { version = "0.16.1", features = ["rayon"] }
rayon = "1.11.0"
tracing = "0.1.44"
parking_lot = "0.12.5"
glam = "0.30.9"
egui = "0.33.3"
egui-wgpu = "0.33.3"
winit = "0.30.12"
rapier3d = { version = "0.32.0", features = ["simd-stable", "parallel"] }
