[package]
name = "helmer_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.3"
gilrs = "0.11.0"
glam = "0.30.8"
helmer = { path = "../helmer" }
helmer_becs = { path = "../helmer_becs" }
bevy_ecs = { version = "0.17.2", features = ["reflect_auto_register", "reflect_functions"] }
mlua = { version = "0.11.5", features = ["lua54", "vendored", "send"] }
notify = "8.2.0"
rfd = "0.17.2"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
walkdir = "2.5.0"
winit = "0.30.12"
