[package]
name = "helmer_input"
version = "0.1.0"
edition = "2024"

[dependencies]
helmer = { path = "../helmer" }
egui = "0.33.3"
glam = "0.30.9"
hashbrown = "0.16.1"
parking_lot = "0.12.5"
tracing = "0.1.44"
winit = "0.30.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.11.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = [
    "Gamepad",
    "GamepadButton",
    "Navigator",
    "Window",
] }
