[package]
name = "helmer_networking"
version = "0.1.0"
edition = "2024"

[dependencies]
helmer = { path = "../helmer" }
fastrand = "2.4.0"
futures-channel = "0.3.32"
futures-util = { version = "0.3.32", features = ["sink"] }
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.51.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.29.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.7.0"
wasm-bindgen-futures = "0.4.67"
