[package]
name = "helmer_render"
version = "0.1.0"
edition = "2024"

[dependencies]
helmer = { path = "../helmer" }
glam = "0.30.9"
hashbrown = "0.16.1"
parking_lot = "0.12.5"
thiserror = "2.0.18"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
bytemuck = "1.25.0"
rand = "0.9.2"
base64 = "0.22.1"
crossbeam-channel = "0.5.15"
image = { version = "0.25.9", features = ["png"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
slotmap = "1.1.1"
generational-arena = "0.2.9"
bitflags = "2.10.0"
dyn-clone = "1.0.20"
web-time = "1.1.0"
bincode = "1.3.3"
fontdb = "0.23.0"
parley = { version = "0.7.0", default-features = false, features = ["std"] }
swash = "0.2.6"
winit = "0.30.12"
meshopt = "0.6.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11.0"
hashbrown = { version = "0.16.1", features = ["rayon"] }
wgpu = { version = "28.0.0", features = ["static-dxc"] }
pollster = "0.4.0"
egui-winit = "0.33.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "28.0.0", features = ["webgl"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
egui-winit = { version = "0.33.3", default-features = false }
web-sys = { version = "0.3.85", features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Navigator",
    "Node",
    "Window",
] }
js-sys = "0.3.85"
