[package]
name = "helmer_view"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.17.2"
glam = "0.30.9"
helmer = { path = "../helmer" }
helmer_audio = { path = "../helmer_audio" }
helmer_render = { path = "../helmer_render" }
helmer_asset = { path = "../helmer_asset" }
helmer_window = { path = "../helmer_window" }
helmer_becs = { path = "../helmer_becs" }
helmer_ui = { path = "../helmer_ui" }
becs_bench = { path = "../becs_bench" }
winit = "0.30.12"
parking_lot = "0.12.5"
rand = "0.9.2"
rfd = "0.17.2"
pollster = "0.4.0"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.11.1"
rapier3d = { version = "0.32.0", features = ["simd-stable", "parallel"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rapier3d = { version = "0.32.0", default-features = false, features = ["dim3", "f32", "simd-stable"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
