[package]
name = "test_game"
version = "0.1.0"
edition = "2024"

[dependencies]
helmer = { path = "../helmer" }
helmer_audio = { path = "../helmer_audio" }
helmer_render = { path = "../helmer_render" }
helmer_asset = { path = "../helmer_asset" }
helmer_window = { path = "../helmer_window" }
helmer_ecs = { path = "../helmer_ecs" }
glam = "0.30.9"
rand = "0.9.2"
rapier3d = "0.32.0"
winit = "0.30.12"
gilrs = "0.11.1"
egui = "0.33.3"
